<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_24px"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_services"
        android:icon="@drawable/ic_services_24px"
        android:title="@string/nav_services" />
    <item
        android:id="@+id/nav_catalog"
        android:icon="@drawable/ic_catalog_24px"
        android:title="@string/nav_catalog" />
    <item
        android:id="@+id/nav_customize"
        android:icon="@drawable/edit_24px"
        android:title="@string/btn_personalize" />
    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/login_24px"
        android:title="@string/nav_login" />
</menu>